--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
     "@types/lodash": "^4.17.16",
+    "@types/mjml": "^4.7.4",
     "@types/node": "^22.13.14",
     "reflect-metadata": "^0.2.2",
     "sequelize-cli": "^6.6.2",
@@ -19,6 +20,7 @@
     "@fastify/cors": "^11.0.1",
     "@fastify/helmet": "^13.0.1",
     "@fastify/sensible": "^6.0.3",
+    "@types/luxon": "^3.6.2",
     "axios": "^1.8.4",
     "bullmq": "^5.49.1",
     "dotenv": "^16.4.7",
@@ -26,10 +28,14 @@
     "fastify-plugin": "^5.0.1",
     "fastify-swagger": "^5.1.1",
     "firebase-admin": "^13.2.0",
+    "liquidjs": "^10.21.0",
     "lodash": "^4.17.21",
+    "luxon": "^3.6.1",
+    "mjml": "^4.15.3",
     "pg": "^8.14.1",
     "pg-hstore": "^2.3.4",
     "pino-pretty": "^13.0.0",
+    "redis": "^4.7.0",
     "sequelize": "^6.37.6",
     "sequelize-typescript": "^2.1.6",
     "zod": "^3.24.2"
