--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "start": "ts-node src/server.ts",
+    "start": "ts-node -r tsconfig-paths/register src/server.ts",
     "build": "tsc",
     "migrate:up": "npx sequelize-cli db:migrate",
     "migrate:undo": "npx sequelize-cli db:migrate:undo"
@@ -13,6 +13,7 @@
     "reflect-metadata": "^0.2.2",
     "sequelize-cli": "^6.6.2",
     "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.8.2"
   },
   "dependencies": {
@@ -27,6 +28,7 @@
     "fastify": "^5.2.1",
     "fastify-plugin": "^5.0.1",
     "fastify-swagger": "^5.1.1",
+    "fastify-type-provider-zod": "^4.0.2",
     "firebase-admin": "^13.2.0",
     "liquidjs": "^10.21.0",
     "lodash": "^4.17.21",
