--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "start": "ts-node -r tsconfig-paths/register src/server.ts",
     "build": "tsc",
     "migrate:up": "npx sequelize-cli db:migrate",
-    "migrate:undo": "npx sequelize-cli db:migrate:undo"
+    "migrate:undo": "npx sequelize-cli db:migrate:undo",
+    "seed:all": "npx sequelize-cli db:seed:all"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
